--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
 		"gulp-rename": "2.0.0",
 		"gulp-replace": "1.1.4",
 		"gulp-terser": "2.1.0",
-		"js-yaml": "4.1.0"
+		"js-yaml": "4.1.0",
+		"@vitalets/google-translate-api": "8.0.0"
 	},
 	"devDependencies": {
 		"@types/gulp": "4.0.10",
